i18n added new variables

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -17,7 +17,7 @@
                 <div class="field-label">
                     <span>{{ 'functions:IMAGE_NAME' | i18next }}</span>
                     <igz-more-info
-                            data-description="{{ 'functions:TOOLTIP.IMAGE_NAME' | i18next }}"
+                            data-description="{{ 'functions:IMAGE_NAME_DESCRIPTION' | i18next }}"
                             data-trigger="click">
                     </igz-more-info>
                 </div>
@@ -37,7 +37,7 @@
                 <div class="field-label label-with-tooltip align-items-center">
                     <span>{{ 'functions:BASE_IMAGE' | i18next }}</span>
                     <igz-more-info
-                            data-description="{{ 'functions:TOOLTIP.BASE_IMAGE' | i18next }}"
+                            data-description="{{ 'functions:BASE_IMAGE_DESCRIPTION' | i18next }}"
                             data-trigger="click">
                     </igz-more-info>
                 </div>
@@ -71,7 +71,7 @@
                 <div class="field-label">
                     <span>{{ 'functions:BUILD_COMMANDS' | i18next }}</span>
                     <igz-more-info
-                            data-description="{{ 'functions:TOOLTIP.BUILD_COMMANDS' | i18next }}"
+                            data-description="{{ 'functions:BUILD_COMMANDS_DESCRIPTION' | i18next }}"
                             data-trigger="click">
                     </igz-more-info>
                 </div>
@@ -91,7 +91,7 @@
                 <div class="field-label label-with-tooltip align-items-center">
                     <span>{{ 'functions:READINESS_TIMEOUT_SECONDS' | i18next }}</span>
                     <igz-more-info
-                            data-description="{{ 'functions:TOOLTIP.READINESS_TIMEOUT_SECONDS' | i18next }}"
+                            data-description="{{ 'functions:READINESS_TIMEOUT_SECONDS_DESCRIPTION' | i18next }}"
                             data-trigger="click">
                     </igz-more-info>
                 </div>
