--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -111,7 +111,7 @@
                 <div class="igz-col-10 row-title">{{ 'common:GPU' | i18next }}</div>
                 <div class="igz-col-40 input-wrapper"></div>
                 <div class="igz-col-40 input-wrapper"
-                     data-uib-tooltip="{{ 'functions:TOOLTIP.PER_REPLICA' | i18next }}"
+                     data-uib-tooltip="{{ 'common:TOOLTIP.PER_REPLICA' | i18next }}"
                      data-tooltip-append-to-body="true"
                      data-tooltip-placement="bottom"
                      data-tooltip-popup-delay="500">
