Impl [Nuclio] Remove min value of 1 from "Replicas: Max" field

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -159,7 +159,7 @@
                                           data-decimal-number="0"
                                           data-value-step="1"
                                           data-validation-is-required="false"
-                                          data-min-value="$ctrl.minReplicas || 1"></igz-number-input>
+                                          data-min-value="$ctrl.minReplicas"></igz-number-input>
                     </div>
                 </div>
             </div>
