Impl [Nuclio] Test pane: disable "Test" button if in standby (#639)

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -66,24 +66,28 @@
                     </div>
 
                     <div class="right-side-elements">
-                        <div class="new-test-event"
-                             data-ng-click="$ctrl.resetData()"
-                             data-uib-tooltip="{{ 'functions:TOOLTIP.NEW_TEST' | i18next }}"
-                             data-tooltip-popup-delay="300"
-                             data-tooltip-placement="left"
-                             data-tooltip-append-to-body="true">
+                        <button class="new-test-event"
+                                data-ng-click="$ctrl.resetData()"
+                                data-uib-tooltip="{{ 'functions:TOOLTIP.NEW_TEST' | i18next }}"
+                                data-tooltip-popup-delay="300"
+                                data-tooltip-placement="left"
+                                data-tooltip-append-to-body="true">
                             <span class="ncl-icon-add"></span>
-                        </div>
-                        <div class="igz-button-primary"
-                             data-ng-class="{'disabled': $ctrl.isDisabledTestButton()}"
-                             data-ng-click="$ctrl.testEvent()">
+                        </button>
+                        <button class="igz-button-primary"
+                                data-ng-class="{'disabled': $ctrl.isDisabledTestButton()}"
+                                data-ng-click="$ctrl.testEvent()"
+                                data-uib-tooltip="{{$ctrl.version.status.state !== 'ready' || $ctrl.version.spec.disable ? ('functions:TOOLTIP.DISABLED_FUNCTION' | i18next) : ''}}"
+                                data-tooltip-popup-delay="300"
+                                data-tooltip-placement="top"
+                                data-tooltip-append-to-body="true">
                             {{ 'functions:TEST' | i18next }}
-                        </div>
-                        <div class="ncl-secondary-button"
-                             data-ng-class="{'disabled': $ctrl.uploadingData.name !== ''}"
-                             data-ng-click="$ctrl.uploadingData.name !== '' || $ctrl.saveEvent()">
+                        </button>
+                        <button class="ncl-secondary-button"
+                                data-ng-class="{'disabled': $ctrl.uploadingData.name !== ''}"
+                                data-ng-click="$ctrl.uploadingData.name !== '' || $ctrl.saveEvent()">
                             {{ 'common:SAVE' | i18next }}
-                        </div>
+                        </button>
                     </div>
                 </div>
                 <div data-ui-layout="{ flow : 'row', dividerSize: 3 }">
