--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
@@ -41,7 +41,7 @@
                         <div class="template-description">{{value.rendered.spec.description}}</div>
                         <div data-ng-if="value.ui.readMore"
                              class="template-read-more">
-                            {{ 'functions:READ_MORE' | i18next}}...
+                            {{ 'functions:READ_MORE' | i18next }}...
                         </div>
                     </div>
 
@@ -81,7 +81,7 @@
                                                             data-validation-max-length="{{$ctrl.validationPatterns.getMaxLength('function.name')}}"
                                                             data-hide-counter="false"
                                                             data-input-model-options="$ctrl.inputModelOptions"
-                                                            data-placeholder-text="{{ 'functions:PLACEHOLDER.TYPE_FUNCTION_NAME' | i18next }}..."
+                                                            data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_FUNCTION_NAME' | i18next }}..."
                                                             data-uib-tooltip="{{ 'functions:TOOLTIP.FUNCTION_NAME' | i18next }}"
                                                             data-tooltip-popup-delay="500"
                                                             data-tooltip-append-to-body="true">
