fixed disabled `Create` button

--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
@@ -94,7 +94,7 @@
                                 </button>
                                 <button class="ncl-primary-button"
                                         data-ng-click="$ctrl.createFunction()"
-                                        data-ng-class="{'disabled': !$ctrl.isCreateFunctionAllowed}">
+                                        data-ng-class="{'disabled': !$ctrl.isCreateFunctionAllowed()}">
                                     {{ 'common:CREATE' | i18next }}
                                 </button>
                             </div>
