--- a/src/nuclio/projects/new-project-dialog/new-project-dialog.tpl.html
+++ b/src/nuclio/projects/new-project-dialog/new-project-dialog.tpl.html
@@ -13,7 +13,7 @@
                 {{ 'functions:PROJECT_NAME' | i18next }}
             </div>
             <div class="field-input">
-                <div class="error" data-ng-show="$ctrl.isShowFieldInvalidState(newProjectForm, 'spec.displayName')">
+                <div class="error" data-ng-show="$ctrl.isShowFieldInvalidState(newProjectForm, 'metadata.name')">
                     {{ 'common:ERROR_MSG.INVALID_INPUTS' | i18next }}
                 </div>
                 <div class="error" data-ng-show="$ctrl.nameTakenError">
@@ -21,8 +21,8 @@
                 </div>
                 <igz-validating-input-field class="nuclio-validating-input"
                                             data-field-type="input"
-                                            data-input-name="spec.displayName"
-                                            data-input-value="$ctrl.data.spec.displayName"
+                                            data-input-name="metadata.name"
+                                            data-input-value="$ctrl.data.metadata.name"
                                             data-is-focused="true"
                                             data-form-object="newProjectForm"
                                             data-validation-is-required="true"
