--- a/src/nuclio/projects/projects-table-row/projects-table-row.tpl.html
+++ b/src/nuclio/projects/projects-table-row/projects-table-row.tpl.html
@@ -5,7 +5,7 @@
     <div class="igz-row common-table-cells-container inactive-state"
          data-ng-click="$ctrl.showDetails($event)">
         <div class="igz-col-25 common-table-cell name">
-            {{$ctrl.project.spec.displayName}}
+            {{$ctrl.project.spec.displayName || $ctrl.project.metadata.name}}
         </div>
         <div class="igz-col-{{$ctrl.isDemoMode() ? '25' : '75'}} common-table-cell description">
             {{$ctrl.project.spec.description}}
