--- a/src/nuclio/projects/projects.tpl.html
+++ b/src/nuclio/projects/projects.tpl.html
@@ -63,31 +63,31 @@
                     </igz-action-checkbox-all>
                     <div class="igz-row common-table-cells-container">
                         <div class="igz-col-25 common-table-cell sortable name"
-                             data-ng-class="$ctrl.getColumnSortingClasses('displayName', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
-                             data-ng-click="$ctrl.sortTableByColumn('displayName')">
+                             data-ng-class="$ctrl.getColumnSortingClasses('spec.displayName', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
+                             data-ng-click="$ctrl.sortTableByColumn('spec.displayName')">
                             {{ 'common:NAME' | i18next }}
                             <span class="sort-arrow"></span>
                             <div data-igz-resizable-table-column data-col-class="common-table-cell.name"></div>
                         </div>
                         <div class="igz-col-{{$ctrl.isDemoMode() ? '25' : '75'}} common-table-cell sortable description"
-                             data-ng-class="$ctrl.getColumnSortingClasses('description', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
-                             data-ng-click="$ctrl.sortTableByColumn('description')">
+                             data-ng-class="$ctrl.getColumnSortingClasses('spec.description', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
+                             data-ng-click="$ctrl.sortTableByColumn('spec.description')">
                             {{ 'common:DESCRIPTION' | i18next }}
                             <span class="sort-arrow"></span>
                             <div data-igz-resizable-table-column data-col-class="common-table-cell.description"></div>
                         </div>
                         <div data-ng-if="$ctrl.isDemoMode()"
                              class="igz-col-25 common-table-cell sortable created-by"
-                             data-ng-class="$ctrl.getColumnSortingClasses('created_by', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
-                             data-ng-click="$ctrl.sortTableByColumn('created_by')">
+                             data-ng-class="$ctrl.getColumnSortingClasses('spec.created_by', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
+                             data-ng-click="$ctrl.sortTableByColumn('spec.created_by')">
                             {{ 'common:CREATED_BY' | i18next }}
                             <span class="sort-arrow"></span>
                             <div data-igz-resizable-table-column data-col-class="common-table-cell.created-by"></div>
                         </div>
                         <div data-ng-if="$ctrl.isDemoMode()"
                              class="igz-col-25 common-table-cell sortable created-date"
-                             data-ng-class="$ctrl.getColumnSortingClasses('created_date', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
-                             data-ng-click="$ctrl.sortTableByColumn('created_date')">
+                             data-ng-class="$ctrl.getColumnSortingClasses('spec.created_date', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
+                             data-ng-click="$ctrl.sortTableByColumn('spec.created_date')">
                             {{ 'functions:CREATED_DATE' | i18next }}
                             <span class="sort-arrow"></span>
                             <div data-igz-resizable-table-column data-col-class="common-table-cell.created-date"></div>
