--- a/src/nuclio/projects/project/functions/duplicate-function-dialog/duplicate-function-dialog.tpl.html
+++ b/src/nuclio/projects/project/functions/duplicate-function-dialog/duplicate-function-dialog.tpl.html
@@ -22,7 +22,7 @@
                                             data-validation-pattern="$ctrl.validationPatterns.functionName"
                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_FUNCTION_NAME' | i18next }}"
                                             data-validation-max-length="{{$ctrl.validationPatterns.getMaxLength('function.name')}}"
-                                            data-uib-tooltip="{{ 'functions:TOOLTIP.FUNCTION_NAME' | i18next }}"
+                                            data-uib-tooltip="{{ 'functions:TOOLTIP.PROJECT_FUNCTION_NAME' | i18next }}"
                                             data-tooltip-popup-delay="500"
                                             data-tooltip-append-to-body="true">
                 </igz-validating-input-field>
