--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
@@ -82,7 +82,7 @@
                                                             data-hide-counter="false"
                                                             data-input-model-options="$ctrl.inputModelOptions"
                                                             data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_FUNCTION_NAME' | i18next }}..."
-                                                            data-uib-tooltip="{{ 'functions:TOOLTIP.FUNCTION_NAME' | i18next }}"
+                                                            data-uib-tooltip="{{ 'functions:TOOLTIP.PROJECT_FUNCTION_NAME' | i18next }}"
                                                             data-tooltip-popup-delay="500"
                                                             data-tooltip-append-to-body="true">
                                 </igz-validating-input-field>
