--- a/src/nuclio/projects/new-project-dialog/new-project-dialog.tpl.html
+++ b/src/nuclio/projects/new-project-dialog/new-project-dialog.tpl.html
@@ -28,7 +28,11 @@
                                             data-validation-is-required="true"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-validation-pattern="$ctrl.nameValidationPattern"
-                                            data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_PROJECT_NAME' | i18next }}">
+                                            data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_PROJECT_NAME' | i18next }}"
+                                            data-uib-tooltip="{{ 'functions:TOOLTIP.PROJECT_FUNCTION_NAME' | i18next }}"
+                                            data-tooltip-popup-delay="500"
+                                            data-tooltip-placement="bottom"
+                                            data-tooltip-append-to-body="true">
                 </igz-validating-input-field>
             </div>
         </div>
